Fixing small issues on mobile

--- a/_assets/css/menu.scss
+++ b/_assets/css/menu.scss
@@ -17,6 +17,7 @@
   right: 0;
   overflow: auto;
   justify-content: space-evenly;
+  flex-flow: wrap;
   top: 68px;
 
   ul,
@@ -56,7 +57,7 @@
   display: inline-block;
 
   a {
-    font-size: 24px;
+    font-size: 1.2em;
     width: 100%;
     background: #fcfcfc;
     border: 1px solid black;
