--- a/_assets/css/music.scss
+++ b/_assets/css/music.scss
@@ -1,5 +1,6 @@
 .albums {
   display: flex;
+  padding: 0;
   justify-content: space-around;
   flex-wrap: wrap;
 }
